tests/ui/pattern_path_generics.ina
// COMPILE_FAIL

extern mod core;
using core::prelude::*;

fn main() {
    match Some("foo") {
        None[i32] => {},
        Some(a) => {},
    }
}
